# ChocoPkgUpdater

./: main.py  pyproject.toml  readme.md
fitter/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
settings/: config.yaml
templates/: chocolateyinstall.template  nuspec.template
